--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <title>Extinction Rebellion - De Opstand Begint</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="extinctionrebellion-icon" href="images/favicon.png"/>
-    <link rel="icon" href="/public/images/favicon.png" type="image/x-icon"/>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="/css/app.css" />
+	<link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
 
