--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <link rel="icon" href="images/favicon.png" type="image/x-icon"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/app.css" />
+	<style>
+		@font-face {
+			font-family: 'FucXed';
+			src: url('fonts/fucxedcaps-webfont.woff2') format('woff2'),url('fonts/fucxedcaps-webfont.woff') format('woff'),url('fonts/fucxedcaps-webfont.otf') format('otf');
+			font-weight: normal;
+			font-style: normal
+		}
+	</style>
 </head>
 <body>
 
