--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,17 @@
 <div class="container">
 
 	<header class="row">
-		<div class="col-sm-12">
-			<h1>SLUIT JE AAN</h1>
+		<div class="col-sm-12 col-md-6 col-lg-8">
+			<h1>WHO ARE WE?</h1>
+
+
+		</div>
+
+		<div class="col-sm-12 col-md-6 col-lg-4">
+			<div class="logo">
+				<img src="images/extinctionrebellion-logo_240.png">
+				<span>NEDERLAND</span>
+			</div>
 		</div>
 	</header>
 	<div class="row">
