first text version

--- a/public/index.html
+++ b/public/index.html
@@ -33,34 +33,37 @@
 			</div>
 		</div>
 	</header>
-	<div class="row">
-		<div class="col-sm-12">
-			<img src="images/extinctionsymbol_800.png">
-		</div>
-	</div>
+	<!--<div class="row">-->
+		<!--<div class="col-sm-12">-->
+			<!--<img src="images/extinctionsymbol_800.png">-->
+		<!--</div>-->
+	<!--</div>-->
 	<div class="row">
 		<div class="col-sm-12 block">
 
-			<h1>VERKLARING VAN OPSTAND</h1>
-			<p>WIJ VERKLAREN:</p>
-			<p>INTERNATIONALE VREEDZAME OPSTAND TEGEN 'S WERELDS OVERHEDEN VANWEGE CRIMINELE NALATIGHEID RONDOM DE ECOLOGISCHE CRISIS</p>
+			<img src="images/xr-nl-group.jpg" style="float: right; margin: 10px;" />
+			<p>
+				We are you. We are human beings – from all corners of the country and abroad, of all age groups, from all walks of life. And we are concerned about the future of our planet, for the sake of our children, our species, and all life on this planet.
+			</p>
+			<p>
+				Our government is failing to act on the ongoing ecological crisis. We feel that we have a moral duty to rebel, no matter our political backgrounds, because this world needs ACTION NOW.
+			</p>
+			<p>
+				History shows that peaceful civil disobedience is an effective way to bring about political and social change. Together we can build a world that meets the challenge of this climate crisis, finds the will and the means to transition to a sustainable society. We believe that such a sustainable future includes everybody; that it takes all members of society sharing in hope and access to decision-making to steer our future course well.
+			</p>
 
+			<p>
+				Join us and rebel for life.
+			</p>
 
-			<p>WIJ EISEN:</p>
-			<ul>
-				<li>&raquo; Dat overheden de onverbloemde waarheid vertellen rondom de ecologische crisis</li>
-				<li>&raquo; Klimaatactie op 2e-wereldoorlogse schaal voor 0 uitstoot &amp; omkering in 2025<br></li>
-				<li>&raquo; Participatoire Democratie</li>
-			</ul>
-			<h2>SLUIT JE AAN</h2>
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col-sm-12">
-			<img src="images/rebel-for-life.png">
-		</div>
-	</div>
+	<!--<div class="row">-->
+		<!--<div class="col-sm-12">-->
+			<!--<img src="images/rebel-for-life.png">-->
+		<!--</div>-->
+	<!--</div>-->
 
 	<div class="row">
 		<div class="col-sm-12 block">
@@ -74,6 +77,41 @@
 					<input type="submit" value="Verstuur">
 				</div>
 			</form>
+		</div>
+	</div>
+
+
+
+	<div class="row">
+
+		<div class="col-sm-12 block">
+			<p>We are facing an unprecedented global emergency. Our political leaders are failing us, protecting industry profits over people. We, the people, no longer accept this. We demand change, at the scale of the crisis that we face.</p>
+
+			<p>We are the first generation to clearly see the impacts of climate change and most likely the last one being able to do something against it. Now more than ever before it is time to act, to <strong>Rebel for Life</strong>. Our survival will take everything we’ve got.</p>
+
+		</div>
+
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12 block">
+			<p>We are facing an unprecedented global emergency. Our political leaders are failing us, protecting industry profits over people. We, the people, no longer accept this. We demand change, at the scale of the crisis that we face.</p>
+
+			<p>We are the first generation to clearly see the impacts of climate change and most likely the last one being able to do something against it. Now more than ever before it is time to act, to Rebel for Life. Our survival will take everything we’ve got.</p>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12 block">
+			<h1>We demand:</h1>
+
+			<ul>
+				<li>That the Government tells the truth about how dire our situation is. It must reverse all policies not in alignment with that position and must work alongside the media to communicate the urgency for change.</li>
+				<li>That greenhouse gas emissions from all sectors are reduced to net zero by 2025 and ecological overshoot is reversed through a massive emergency mobilization and a just transition on the scale of World War Two. The new goals of society must be to rapidly restore a safer, cooler climate and to provide maximum protection for all people and species, especially the most vulnerable.</li>
+				<li>That a Citizens Assembly is established to oversee the changes.</li>
+			</ul>
+
+
 		</div>
 	</div>
 
