--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 		<div class="col-sm-12 block">
 
 			<!-- No decent target yet -->
-			<form action="" method="post">
+			<form action="mail.php" method="post">
 				<div>
 					<input type="text" name="name" placeholder="Je naam"><br>
 					<input type="text" name="email" placeholder="Je email-adres"><br>
@@ -131,5 +131,6 @@
 
 </div>
 
+<script src="js/app.js"></script>
 </body>
 </html>
