added links to facebook groups

--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,18 @@
 	</div>
 
 	<div class="row">
+		<div class="col-sm-12 block">
+			<a href="https://www.facebook.com/groups/361791791313396/">
+				Amsterdam facebook group
+			</a>
+
+			<a href="https://www.facebook.com/XRGroningen/?notif_id=1548546204560567&notif_t=page_fan&ref=notif">
+				Groningen facebook group
+			</a>
+		</div>
+	</div>
+
+	<div class="row">
 		<div class="col-sm-12">
 			<iframe src="https://www.google.com/maps/d/embed?mid=11jUqqjTHMThksd4KbvGGzb3I3Cr3PkBl" style="border:none; width:100%; height: 480px; max-width:90vw; max-height:90vh;"></iframe>
 		</div>
